--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 'Thomas Maroulis'
 description: 'I am a software team lead in London'
 description2: 'Also, tinkerer, sci-fi literature reader, space geek, general geek, etc.'
-url: 'https://dalamar42.github.io/'
+url: 'https://dalamar42.github.io'
 baseurl: '/'
 # enforce_ssl: ''
 # google_analytics: 'UA-XXXXXX-X'
