Add LinkedIn link

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
 #  email: ''
 #  twitter_username: ''
   github_username:  'dalamar42'
-#  linkedin_username:  ''
+  linkedin_username:  'thomas-maroulis-77201489'
 
 defaults:
   -
