--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: '/'
 author:
   name: 'Thomas Maroulis'
 #  email: ''
-#  twitter_username: ''
+  twitter_username: 'Dalamar42'
   github_username:  'dalamar42'
   linkedin_username:  'thomas-maroulis-77201489'
 
