--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ baseurl: '/'
 google_analytics: 'UA-89411902-1'
 # disqus_shortname: 'your-disqus-name'
 
+# blog: "enabled"
+
 author:
   name: 'Thomas Maroulis'
 #  email: ''
