--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 'Thomas Maroulis'
-description: 'I am a software team lead in London'
+description: 'I am a software engineer in London'
 description2: 'Also foodie, sci-fi literature reader, space geek, general geek, etc.'
 url: 'https://www.thomasmaroulis.com'
 enforce_ssl: 'www.thomasmaroulis.com'
